# Proyecto_Nociones_Clave

./: CMakeLists.txt  README.md
Proyecto1/: Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  main.cpp
Proyecto2/: main2.cpp  main2.h  matematicas.cpp  matematicas.h
